RESOLVED FIXED174661
Regression(ITP): May get frequently logged out of wsj.com
https://bugs.webkit.org/show_bug.cgi?id=174661
Summary Regression(ITP): May get frequently logged out of wsj.com
Chris Dumez
Reported 2017-07-19 16:21:34 PDT
May get frequently logged out of wsj.com.
Attachments
Patch (6.19 KB, patch)
2017-07-19 16:30 PDT, Chris Dumez
ggaren: review+
cdumez: commit-queue+
Chris Dumez
Comment 1 2017-07-19 16:21:52 PDT
Chris Dumez
Comment 2 2017-07-19 16:30:34 PDT
Brent Fulgham
Comment 3 2017-07-19 21:00:36 PDT
Comment on attachment 315959 [details] Patch Thank you Chris, this is exactly the approach John and Indiscussed.
Geoffrey Garen
Comment 4 2017-07-20 13:43:45 PDT
Comment on attachment 315959 [details] Patch r=me Looks like there's an svn conflict to sort out.
Chris Dumez
Comment 5 2017-07-20 14:08:20 PDT
Note You need to log in before you can comment on or make changes to this bug.