Regression(ITP): May get frequently logged out of wsj.com https://bugs.webkit.org/show_bug.cgi?id=174661 <rdar://problem/32343256>

Reviewed by Geoffrey Garen.

Source/WebCore:

Add the concept of associated domains in the ResourceLoadObserver. We
previously ignore loads to and from the same domains. We now do the same
if the to and from domains are associated (i.e. owned by the same entity).

For now, only add domains owned by Dow Jones & Company, Inc. to the list,
to address login issues on wsj.com.

No new tests, verified manually on wsj.com.

* loader/ResourceLoadObserver.cpp:
(WebCore::areDomainsAssociated):
(WebCore::ResourceLoadObserver::logFrameNavigation):
(WebCore::ResourceLoadObserver::logSubresourceLoading):
(WebCore::ResourceLoadObserver::logWebSocketLoading):

Source/WebKit:

Bump statistics file version to blow away old statistics on disk since those do not
take into account associated domains.

* UIProcess/WebResourceLoadStatisticsStore.cpp:

Canonical link: https://commits.webkit.org/191512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219703 268f45cc-cd09-0410-ab3c-d52691b4dbfc